# Sovereign-AI

./: .dockerignore  .env.example  .gitignore  CLEANUP_NEEDED.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  LICENSE  NOTES.md  PHASE4_FIXES.md  PHASE5_COMPLETE.md  PHASE5_README.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_FIX.md  TESTING_GUIDE.md  TIMEOUT_FIXES.md  TODO.txt  cloudbuild.yaml  debug_api.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  requirements_phase5.txt  run_phase5.py  run_tests.sh  sovereign_ai_benchmark_stats.csv  sovereign_ai_benchmark_stats_history.csv  start_phase5.sh  test_api_timing.py  test_samples.py  verify_fixes.py
agent/: context.py  decision_cache.py  guard.py  langgraph_agent.py  llm_providers.py  safe_agent.py
api/: __init__.py  app.py  app_complete.py  dependencies.py  main.py  main_v2.py  models.py
config/: policy.example.yaml  policy.yaml  policy_loader.py  rate_limits.yaml  regex_patterns.yaml
contracts/: failure_classes.py  severity_levels.py  verdict.py
core/: logger.py  metrics.py  otel.py  utils.py
dashboard/: admin_dashboard.py  control_tower_view.py  governance_dashboard.py
docs/: ARCHITECTURE.md  HARDENING_WRAPUP.md  PRODUCTION_RUNBOOK.md  README.md  TESTING_GUIDE.md
enforcement/: agentic_rails.py  control_tower_v2.py  control_tower_v3.py  control_tower_v3_fixed.py  dialog_orchestrator.py  enrichment.py  moderation_fusion.py  output_correction.py  output_validator.py  tier_router.py
examples/: run_phase1_demo.py  run_with_persistence.py
integrations/: langchain_wrapper.py  (+1 more)
(+101 files in other folders)
