[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-ai"
version = "4.0.0"
description = "Production-ready safety layer for LLM deployments. Detects hallucinations, prompt injections, and policy violations using intelligent 3-tier detection."
readme = "README.md"
authors = [
  { name="Pranaya Mathur", email="maintainer@sovereign-ai.com" }
]
license = { text="MIT" }
requires-python = "==3.11.*"
classifiers = [
    "Programming Language :: Python :: 3.11",

    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["agent*", "api*", "config*", "contracts*", "core*", "dashboard*", "enforcement*", "monitoring*", "persistence*", "providers*", "rules*", "signals*", "transport*"]
exclude = ["tests*", "scripts*", "docs*", "examples*"]

[project.urls]
"Homepage" = "https://github.com/pranaya-mathur/Sovereign-AI"
"Bug Tracker" = "https://github.com/pranaya-mathur/Sovereign-AI/issues"
